--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,319 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  margin: 94px 24px 94px 24px;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  font-size: 18px;
+}
+
+.header__menu {
+  padding-right: 7px;
+}
+
+.header__links-list {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__link {
+  text-decoration: none;
+  border-bottom: 1px #000 solid;
+  letter-spacing: 0.18px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  border-bottom: 0;
+}
+
+.header__logo {
+  display: block;
+  width: 148px;
+  padding: 1px 10px 1px 10px;
+}
+
+.address {
+  display: flex;
+  justify-content: end;
+  padding-right: 59px;
+  line-height: 24.3px;
+  letter-spacing: 0.18px;
+  font-style: normal;
+  letter-spacing: 0.18px;
+}
+.header__address_no_bullit {
+  list-style-type: none;
+}
+
+.cover {
+  position: relative;
+  background-image: url(../images/cover.jpg);
+  height: 757px;
+  color: #fff;
+  text-transform: uppercase;
+  z-index: -1;
+}
+
+.overlay {
+  position: absolute;
+  opacity: 0.5;
+  z-index: 0;
+  inset: 0;
+  background-color: #000;
+}
+
+.cover__title {
+  position: relative;
+  font-size: 100px;
+  font-weight: 700;
+  letter-spacing: 30px;
+}
+
+.aligned-text {
+  display: block;
+  line-height: 115%;
+  padding-top: 165px;
+  padding-left: 50px;
+}
+
+.aligned-text_center {
+  display: block;
+  padding-left: 336px;
+  padding-top: 12px;
+}
+
+.aligned-text_right {
+  display: block;
+  padding-left: 634px;
+  padding-top: 2px;
+}
+
+.letter-spacing-extended {
+  padding-left: 30px;
+}
+
+.cover__description {
+  font-size: 22px;
+  position: relative;
+  margin-top: 126px;
+  z-index: 1;
+}
+
+.cover__description-text {
+  position: absolute;
+  font-weight: 400;
+  left: 48px;
+  word-spacing: 18.5px;
+  padding: 15px 32px 11px 31px;
+}
+
+.bet-button {
+  position: absolute;
+  font-weight: 500;
+  border: 1px solid #fff;
+  right: 0px;
+  margin-right: 50px;
+  padding: 12px 32px 11px 31px;
+  background-color: transparent;
+}
+
+.bet-button a {
+  text-decoration: none;
+}
+
+.lots {
+  padding-top: 179px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-left: 40px;
+  padding-bottom: 27px;
+}
+
+.lots__card-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 25px;
+  list-style: none;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card {
+  min-height: 563px;
+  padding: 51px 40px 51px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.card_type_film {
+  position: relative;
+  z-index: -1;
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
+}
+
+.card_type_book {
+  position: relative;
+  z-index: -1;
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
+}
+
+.card_type_picture {
+  position: relative;
+  z-index: -1;
+  background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
+}
+
+.card__title {
+  position: relative;
+  z-index: 1;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
+  text-transform: uppercase;
+  text-decoration-line: underline;
+}
+
+.card__text {
+  position: relative;
+  z-index: 1;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.lots__look-more-link {
+  display: block;
+  padding-top: 28px;
+  font-size: 20px;
+  margin-left: 40px;
+}
+
+.about {
+  padding: 162px 24px 100px 20px;
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 25px;
+  column-gap: 18px;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: #000;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.about__logo-image {
+  width: 148px;
+}
+
+.about__title {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 100px 0 100px 0;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.1px;
+}
+
+.footer {
+  display: grid;
+  padding: 80px 26px 70px 24px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.address_footer {
+  display: flex;
+  line-height: 24.3px;
+  letter-spacing: 0.18px;
+  font-size: 18px;
+  letter-spacing: 0.18px;
+  padding-left: 26px;
+  font-style: normal;
+}
+
+.footer__menu {
+  padding-left: 4px;
+}
+
+.footer__menu-list {
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__menu-list-item {
+  font-size: 18px;
+}
+
+.footer__menu-link {
+  text-decoration: none;
+  border-bottom: 1px #000 solid;
+  letter-spacing: 0.18px;
+}
+
+.footer__menu-link_active {
+  border-bottom: 0;
+}
+
+.footer__social-list {
+  display: flex;
+  list-style: none;
+  gap: 48px;
+  justify-content: end;
+  padding-right: 24px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
