--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,13 @@
 .header {
   display: grid;
-  margin: 94px 24px 94px 24px;
+  margin: 93px 24px 91px 24px;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
   font-size: 18px;
 }
 
 .header__menu {
-  padding-right: 7px;
+  padding-right: 14px;
 }
 
 .header__links-list {
@@ -35,9 +35,7 @@
 }
 
 .header__logo {
-  display: block;
-  width: 148px;
-  padding: 1px 10px 1px 10px;
+  width: 136px;
 }
 
 .address {
@@ -45,10 +43,11 @@
   justify-content: end;
   padding-right: 59px;
   line-height: 24.3px;
-  letter-spacing: 0.18px;
+
   font-style: normal;
   letter-spacing: 0.18px;
 }
+
 .header__address_no_bullit {
   list-style-type: none;
 }
@@ -56,15 +55,14 @@
 .cover {
   position: relative;
   background-image: url(../images/cover.jpg);
-  height: 757px;
+  min-height: 757px;
   color: #fff;
   text-transform: uppercase;
-  z-index: -1;
 }
 
 .overlay {
   position: absolute;
-  opacity: 0.5;
+  opacity: 0.6;
   z-index: 0;
   inset: 0;
   background-color: #000;
@@ -75,25 +73,25 @@
   font-size: 100px;
   font-weight: 700;
   letter-spacing: 30px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 164px;
+  gap: 8px;
 }
 
 .aligned-text {
-  display: block;
-  line-height: 115%;
-  padding-top: 165px;
+  align-self: flex-start;
   padding-left: 50px;
 }
 
 .aligned-text_center {
-  display: block;
-  padding-left: 336px;
-  padding-top: 12px;
+  align-self: center;
+  padding-right: 29px;
 }
 
 .aligned-text_right {
-  display: block;
-  padding-left: 634px;
-  padding-top: 2px;
+  align-self: flex-end;
+  padding-right: 20px;
 }
 
 .letter-spacing-extended {
@@ -102,27 +100,28 @@
 
 .cover__description {
   font-size: 22px;
-  position: relative;
+  display: flex;
   margin-top: 126px;
   z-index: 1;
 }
 
 .cover__description-text {
-  position: absolute;
+  padding-left: 50px;
   font-weight: 400;
   left: 48px;
   word-spacing: 18.5px;
-  padding: 15px 32px 11px 31px;
+  padding-top: 10px;
+  padding-left: 79px;
 }
 
 .bet-button {
-  position: absolute;
   font-weight: 500;
   border: 1px solid #fff;
   right: 0px;
   margin-right: 50px;
   padding: 12px 32px 11px 31px;
   background-color: transparent;
+  margin-left: 78px;
 }
 
 .bet-button a {
@@ -130,10 +129,7 @@
 }
 
 .lots {
-  padding-top: 179px;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-bottom: 20px;
+  padding: 179px 24px 20px 24px;
 }
 
 .lots__heading {
@@ -166,36 +162,28 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
 }
 
 .card_type_film {
   position: relative;
-  z-index: -1;
+
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  color: #fff;
 }
 
 .card_type_book {
   position: relative;
-  z-index: -1;
+
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  color: #fff;
 }
 
 .card_type_picture {
   position: relative;
-  z-index: -1;
+
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  color: #fff;
 }
 
 .card__title {
